[tool.poetry]
name = "universal_network_mock"
version = "0.1.0"
description = "Creates docker container that mocks network service."
authors = ["Tomasz Kostur <tomasz.kostur@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
